--- a/Exercicios_de_Aula/index.html
+++ b/Exercicios_de_Aula/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <div>POMADA GARAI</div>
+        <div>PAMONHA GARAI, É MUITO BOM, INDEX.HTML</div>
     </body>
 </html>
