--- a/FrontEnd/Web/index.html
+++ b/FrontEnd/Web/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Isso aki resolveu
+    npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch
+    e coloca o output.css no link e GG -->
+    <link rel="stylesheet" href="./dist/output.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parrot</title>
   </head>
-  <!-- O dele tava assim ""<body class="bg-[#121214]">"" SÓ Q CMG NÃO FOI  -->
-  <body bgcolor='#121214'>
+  <body class="bg-[#121214]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
