--- a/FrontEnd/Web/index.html
+++ b/FrontEnd/Web/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Conectar na fonte do google -->
+    <!-- min 47 até 53:30 -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" 
+    rel="stylesheet">
+
     <!-- Isso aki resolveu
     npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch
     e coloca o output.css no link e GG -->
